{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 36,
  "lineage": "f2882dd4-c44e-f5b4-d265-96386afef679",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05621cc86aa0c1cd3",
            "domain": "vpc",
            "id": "eipalloc-05621cc86aa0c1cd3",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-127-222-219.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.222.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-EIP-01",
              "Region": "ap-south-1",
              "Resource": "EIP"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-EIP-01",
              "Region": "ap-south-1",
              "Resource": "EIP"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096f651976c2840b9",
            "domain": "vpc",
            "id": "eipalloc-096f651976c2840b9",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-177-83.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.177.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-EIP-02",
              "Region": "ap-south-1",
              "Resource": "EIP"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-EIP-02",
              "Region": "ap-south-1",
              "Resource": "EIP"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d56f531ffa3fd78e",
            "domain": "vpc",
            "id": "eipalloc-0d56f531ffa3fd78e",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-39-0.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.39.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-EIP-03",
              "Region": "ap-south-1",
              "Resource": "EIP"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-EIP-03",
              "Region": "ap-south-1",
              "Resource": "EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:internet-gateway/igw-03200db4f65f32741",
            "id": "igw-03200db4f65f32741",
            "owner_id": "020418788736",
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-IGW-01",
              "Region": "ap-south-1",
              "Resource": "IGW"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-IGW-01",
              "Region": "ap-south-1",
              "Resource": "IGW"
            },
            "vpc_id": "vpc-06d582e6d0753b651"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05621cc86aa0c1cd3",
            "connectivity_type": "public",
            "id": "nat-0c1865a6d50481c8f",
            "network_interface_id": "eni-0174388262db5ae6b",
            "private_ip": "10.0.1.162",
            "public_ip": "13.127.222.219",
            "subnet_id": "subnet-01df95be4f40f11fc",
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-NAT-01",
              "Region": "ap-south-1",
              "Resource": "NAT"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-NAT-01",
              "Region": "ap-south-1",
              "Resource": "NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096f651976c2840b9",
            "connectivity_type": "public",
            "id": "nat-03252235295e1c079",
            "network_interface_id": "eni-0264f8ce412e29499",
            "private_ip": "10.0.2.164",
            "public_ip": "3.109.177.83",
            "subnet_id": "subnet-07280872f0fee7d28",
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-NAT-02",
              "Region": "ap-south-1",
              "Resource": "NAT"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-NAT-02",
              "Region": "ap-south-1",
              "Resource": "NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d56f531ffa3fd78e",
            "connectivity_type": "public",
            "id": "nat-064152aa3c2cd3f45",
            "network_interface_id": "eni-0ee41c80df63024a1",
            "private_ip": "10.0.3.93",
            "public_ip": "15.207.39.0",
            "subnet_id": "subnet-0a42bb4d31d78ebce",
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-NAT-03",
              "Region": "ap-south-1",
              "Resource": "NAT"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-NAT-03",
              "Region": "ap-south-1",
              "Resource": "NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_subnet_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03200db4f65f32741",
            "id": "r-rtb-0da75e025b2708e6f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da75e025b2708e6f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "pvt_subnet_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0acaa4472e5ce12fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c1865a6d50481c8f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0acaa4472e5ce12fb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-073e9aefca4ccf5571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03252235295e1c079",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-073e9aefca4ccf557",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08639cdfe393074b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-064152aa3c2cd3f45",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08639cdfe393074b3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:route-table/rtb-0acaa4472e5ce12fb",
            "id": "rtb-0acaa4472e5ce12fb",
            "owner_id": "020418788736",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-RT-01",
              "Region": "ap-south-1",
              "Resource": "PRI-RT"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-RT-01",
              "Region": "ap-south-1",
              "Resource": "PRI-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d582e6d0753b651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:route-table/rtb-073e9aefca4ccf557",
            "id": "rtb-073e9aefca4ccf557",
            "owner_id": "020418788736",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-RT-02",
              "Region": "ap-south-1",
              "Resource": "PRI-RT"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-RT-02",
              "Region": "ap-south-1",
              "Resource": "PRI-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d582e6d0753b651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:route-table/rtb-08639cdfe393074b3",
            "id": "rtb-08639cdfe393074b3",
            "owner_id": "020418788736",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-RT-03",
              "Region": "ap-south-1",
              "Resource": "PRI-RT"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-RT-03",
              "Region": "ap-south-1",
              "Resource": "PRI-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d582e6d0753b651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:route-table/rtb-0da75e025b2708e6f",
            "id": "rtb-0da75e025b2708e6f",
            "owner_id": "020418788736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03200db4f65f32741",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PUB-RT-01",
              "Region": "ap-south-1",
              "Resource": "PUB-RT"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PUB-RT-01",
              "Region": "ap-south-1",
              "Resource": "PUB-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d582e6d0753b651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_pub_rt_asso",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0fd6175db373066",
            "route_table_id": "rtb-0da75e025b2708e6f",
            "subnet_id": "subnet-01df95be4f40f11fc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05033f3d2b41a7e28",
            "route_table_id": "rtb-0da75e025b2708e6f",
            "subnet_id": "subnet-07280872f0fee7d28"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027a8fa316d11469f",
            "route_table_id": "rtb-0da75e025b2708e6f",
            "subnet_id": "subnet-0a42bb4d31d78ebce"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sub_pvt_rt_asso",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0180eee4521214baa",
            "route_table_id": "rtb-0acaa4472e5ce12fb",
            "subnet_id": "subnet-0140fb1554a88d77e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c434209c5ea28d15",
            "route_table_id": "rtb-073e9aefca4ccf557",
            "subnet_id": "subnet-0ae3c864c63b7db31"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0376303d981e840a1",
            "route_table_id": "rtb-08639cdfe393074b3",
            "subnet_id": "subnet-09b52719d1b1df42f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:subnet/subnet-0140fb1554a88d77e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0140fb1554a88d77e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020418788736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-01",
              "Region": "ap-south-1",
              "Resource": "PRI"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-01",
              "Region": "ap-south-1",
              "Resource": "PRI"
            },
            "vpc_id": "vpc-06d582e6d0753b651"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:subnet/subnet-0ae3c864c63b7db31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.51.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae3c864c63b7db31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020418788736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-02",
              "Region": "ap-south-1",
              "Resource": "PRI"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-02",
              "Region": "ap-south-1",
              "Resource": "PRI"
            },
            "vpc_id": "vpc-06d582e6d0753b651"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:subnet/subnet-09b52719d1b1df42f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b52719d1b1df42f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020418788736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-03",
              "Region": "ap-south-1",
              "Resource": "PRI"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PRI-03",
              "Region": "ap-south-1",
              "Resource": "PRI"
            },
            "vpc_id": "vpc-06d582e6d0753b651"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:subnet/subnet-01df95be4f40f11fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01df95be4f40f11fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020418788736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_on": "2023-04-27T11:51:40Z",
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PUB-01",
              "Region": "ap-south-1",
              "Resource": "PUB"
            },
            "tags_all": {
              "Created_on": "2023-04-27T11:51:40Z",
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PUB-01",
              "Region": "ap-south-1",
              "Resource": "PUB"
            },
            "vpc_id": "vpc-06d582e6d0753b651"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:subnet/subnet-07280872f0fee7d28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07280872f0fee7d28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020418788736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_on": "2023-04-27T11:51:40Z",
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PUB-02",
              "Region": "ap-south-1",
              "Resource": "PUB"
            },
            "tags_all": {
              "Created_on": "2023-04-27T11:51:40Z",
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PUB-02",
              "Region": "ap-south-1",
              "Resource": "PUB"
            },
            "vpc_id": "vpc-06d582e6d0753b651"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:subnet/subnet-0a42bb4d31d78ebce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a42bb4d31d78ebce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "020418788736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Created_on": "2023-04-27T11:51:40Z",
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PUB-03",
              "Region": "ap-south-1",
              "Resource": "PUB"
            },
            "tags_all": {
              "Created_on": "2023-04-27T11:51:40Z",
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-PUB-03",
              "Region": "ap-south-1",
              "Resource": "PUB"
            },
            "vpc_id": "vpc-06d582e6d0753b651"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020418788736:vpc/vpc-06d582e6d0753b651",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a524cc575dd97f1",
            "default_route_table_id": "rtb-04a7d82f29c21a3ae",
            "default_security_group_id": "sg-0a687c4414fa026d0",
            "dhcp_options_id": "dopt-0bfc9d8f26559c551",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06d582e6d0753b651",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a7d82f29c21a3ae",
            "owner_id": "020418788736",
            "tags": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-VPC-01",
              "Region": "ap-south-1",
              "Resource": "VPC"
            },
            "tags_all": {
              "Env": "PROD",
              "Managed_by": "BETAFLUX",
              "Name": "BF-NHM-PROD-MU-VPC-01",
              "Region": "ap-south-1",
              "Resource": "VPC"
            }
          }
        }
      ]
    }
  ]
}